added firestrore to the app

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
   </head>
 
   <body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
     <rnds-root></rnds-root>
   </body>
 </html>
